[package]
name = "krpc-rs"
version = "0.3.1"
authors = ["Cyclic3 <>"]
description = "The basic types for communicating with the Kerbal Space Program Remote Procedure Calls mod, implemented in rust"
documentation = "https://docs.rs/krpc-rs"
repository = "https://github.com/krpc-rs/krpc-rs"
license = "GPL-3.0"

[lib]
name = "krpc"

[dependencies]
protobuf = "^1.4.1"
